# clawchat-plugin-hermes-agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  __init__.py  clawchat_cli.py  install.md  plugin.yaml  pyproject.toml
.e2e/: .env.example  dev_install.md  local_start_test.sh
.e2e/docs/: testing.md
clawchat_gateway/: __init__.py  activate.py  adapter.py  api_client.py  clawchat_memory.py  clawchat_metadata.py  cli.py  commands.py  config.py  connection.py  device_id.py  friend_request_turn.py  gate_outcome.py  greeting.py  group_context.py  group_message_coalescer.py  group_settings.py  inbound.py  liveware_cli.py  liveware_sample.py  llm_context_debug.py  llm_context_hooks.py  media_runtime.py  mention_message.py  no_reply.py  notify_signal.py  output_visibility.py  permission_result.py  permissions.py  plugin_prompts.py  plugin_tools.py  profile.py  profile_sync.py  protocol.py  restart.py  runtime_defaults.py  skill_update.py  standalone_send.py  storage.py  terminal_send.py  (+2 more)
clawchat_gateway/fixtures/permission_events/: agent-permission-changed.json  awareness-conversation-created.json  awareness-conversation-updated.json  awareness-friend-added.json  awareness-friend-profile-updated.json  awareness-friend-removed.json  friend-request-allow.json  friend-request-deny.json  gate-outcome-21001.json  gate-outcome-21003.json  gate-outcome-other.json  permission-result-approved.json
clawchat_gateway/prompts/: default-owner-behavior.md  platform.md  user.md
docs/: README.md  REORG_PLAN.md  activate.md  activation.md  adapter.md  api-client.md  approve.md  architecture.md  clawchat-protocol.md  cli.md  client-integration.md  configuration.md  connection.md  development.md  group-context.md  hermes-source-lookup.md  install.md  liveware-sample.md  openclaw-clawchat.md  optimize_plan.md  output-visibility.md  plugin-entrypoint.md  plugin-tools.md  profile.md  restart.md  skill-updates.md  tests.md  tools.md
docs/reference/: cli.md  http-endpoints.md  prompt-injection.md  prompts.md  tools.md
prompts/: default-group-bio.md  default-owner-behavior.md  group.md  platform.md  user.md
skills/: manifest.json
skills/clawchat/: SKILL.md
skills/clawchat-core/: SKILL.md
skills/clawchat-liveware/: SKILL.md
skills/clawchat-liveware-sample/: SKILL.md
skills/clawchat-set-greeting/: SKILL.md
skills/liveware-app/: SKILL.md
tests/: test_activate.py  test_activation_connect_retry.py  test_adapter.py  test_adapter_dispatch.py  test_api_client.py  test_api_client_apps.py  test_app_tools.py  test_clawchat_cli.py  test_config.py  test_connection.py  test_connection_single_supervisor.py  test_connection_token_refresh.py  test_context_on_mention.py  test_duplicate_send.py  test_e2e_install_docs.py  test_friendship_tools.py  test_git_plugin.py  test_group_context.py  test_group_message_coalescer.py  test_group_sessions_per_user_config.py  test_group_settings.py  test_inbound.py  test_legacy_config_token_migration.py  test_liveware_login.py  test_media_base_url.py  test_no_reply.py  test_notify_signal_observer.py  test_output_visibility.py  test_permission_gate_api_error_mapping.py  test_plugin.py  test_plugin_prompts.py  test_plugin_report.py  test_protocol_conformance_fixes.py  test_reply_mode_surface_removed.py  test_resolve_base_url.py  test_setup.py  test_storage_db_path.py  test_storage_db_relocation.py  test_storage_device_id.py  test_system_message_drop.py  (+1 more)
(+1 files in other folders)
