[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawchat-gateway"
dynamic = ["version"]
description = "ClawChat v2 gateway adapter for hermes-agent"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["websockets>=12,<16", "PyYAML>=6,<7"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=4"]

[tool.setuptools]
include-package-data = true

# Single source of truth for the package version: clawchat_gateway.__version__.
# The plugin reports this same attribute to member-backend (adapter.py imports it
# as _PLUGIN_VERSION), so deriving the build version from it keeps the reported
# version, the wheel version, and the runtime constant from ever drifting apart.
[tool.setuptools.dynamic]
version = { attr = "clawchat_gateway.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["clawchat_gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
